# host-installer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  answerfile.py  answerfile_ui.py  backend.py  bootloader.py  bugtool.py  clean-installer  constants.py  cpiofile.py  devscan.py  diskinfo.py  disktools.py  diskutil.py  dmvdata.py  dmvtest.py  dmvutil.py  driver.py  fcoeutil.py  fix_ad_reg_paths.py  generalui.py  hardware.py  host-installer.spec.in  hwdetect  init  init_constants.py  init_simpleui.py  init_tui.py  install.py  md5crypt.py  mockrun-installer  netinterface.py  netutil.py  oem.py  packaging.py  pbzip2file.py  pbzip2file_test.py  ppexpect.py  (+22 more)
.github/workflows/: python-static-checks.yml  python-warning-matcher.json
bootloader/: grub-usb.patch  grub.cfg  isolinux.cfg
ci/: mypy-for-changes.ini  mypy-for-changes.sh
dists/kbd/: 01_locale_h.patch  Makefile
doc/: answerfile.txt  features.txt  mockrun.md  parameters.txt
installer/: installer.py  p2v_error.py
mbootpack/: Changes  Makefile  README  buildimage.c  mb_header.h  mb_info.h  mbootpack.c  mbootpack.h  mkhex  setup.S
mk/: 40-multipath.rules  Makefile  clean_fw.pl  collect-files  delete_bad_exes.pl  discover-uclibc.patch  executable_list.txt  extract-fs  installer.conf  installer.service  issue.in  log_tty.conf  pkgs.txt  remove_dups.py  sshd_installer.conf
mockrun-data/: ifcfg-eth98  ifcfg-eth99
mockrun-data/etc/xensource/: xapi-ssl.pem
mockrun-data/sys/hypervisor/properties/: capabilities
oem/: Makefile  answerfilegen  answerfilegen.py  build-fi-image.sh  create-partitions  populate-partition  rebuild-initrd.sh  rebuild-iso.sh  update-initrd  update-partitions
p2v/: Makefile  constants.py  findroot.py  httpput.py  p2v.py  p2v_answerfile.py  p2v_answerfile_ui.py  p2v_backend.py  p2v_constants.py  p2v_error.py  p2v_pyanswerfile_ui.py  p2v_tui.py  p2v_uicontroller.py  p2v_utils.py  read_osversion.sh  sample_answerfile.xml
startup/: 01-installer.rules  60-firmware.rules  61-xenrt.rules  Makefile  NOT_YET_IN_USE  S01genesis  S02auto  S02hardware  S03auto  S03unplug-vcpus  S05ramdisk  S06mount  S11network  S99alt-start  blacklist  early-blacklist  early-blacklist.service  firmware.agent  inittab  interface-rename-sideway  interface-rename-sideway.service  multipath.conf.disabled  preinit  sshd_installer.conf
test/: import_helper.py  test.sh  test_errors.py  test_netutil.py  test_ppexpect.py  test_shrinklvm.py  version.py
tests/: diskFromPartition_test.py  version_test.py
tests/doc/: manual-tests.tex
tools/: replace-recovery-image.sh
tui/: __init__.py  fcoe.py  init.py  init_oem.py  network.py  progress.py  repo.py
tui/installer/: __init__.py  screens.py
uClibc/: Makefile  hn  hn.c
upgrade-plugin/: Makefile  prepare_host_upgrade.py  upgrade-plugin.spec.in
